changed plugin folder name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Ducha_IoT</title>
   <meta name="description" content="Data from my IoT shower project.">
   <meta name="author" content="GitSRealpe">
-  <script src="node_modules/chart.js/dist/chart.js"></script>
+  <script src="js_libs/chart.js/dist/chart.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.0.2/chart.js" integrity="sha512-n8DscwKN6+Yjr7rI6mL+m9nS4uCEgIrKRFcP0EOkIvzOLUyQgOjWK15hRfoCJQZe0s6XrARyXjpvGFo1w9N3xg==" crossorigin="anonymous"></script> -->
   <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
 </head>
