--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     fechas=fechas.reverse()
     console.log(fechas)
 
-    var x=document.getElementById("cuadro");
-    x.style.color = "red";
-    x.innerHTML=texto
+    // var x=document.getElementById("cuadro");
+    // x.style.color = "red";
+    // x.innerHTML=texto
     var x=document.getElementById("zona");
     x.style.color = "gray";
     x.innerHTML=new Date().toTimeString();
